--- a/src/language/models/en/message.ini
+++ b/src/language/models/en/message.ini
@@ -9,7 +9,10 @@ start_message = Hello! I am personal assistant Masha. I can play with you in gam
 stop_message_key = I forgot previous conversation. Now we can start our communication from the beginning!
 hi_message = Hello!
 introduction_message = My abilities depend on my moduls. Now I can play in Tic-Tac-Toe,
-                    XO and Matches games. Also I can solve some mathematical tasks.
+                    XO and Matches games. I can solve some mathematical tasks.  Besides it I speak
+                    on Russian, Italian, Poland, Endlish and Spain language. Just tell me "Speak with me on Russian".
+                    If you decide learn something new you can say "Gime me fact about" e.g. animals.
+                    If you can chat with me, send me voice message.
 matches_game.amount_of_matches = I take {amount}. There are {matches} matches on board.
 matches_game.start_game.user_first = Matches Game started. There are {matches} matches on board. You can take from 1 to 3 matches per turn.
                     Person who will take the last match will lose. Now your move.
