--- a/src/language/models/en/message.ini
+++ b/src/language/models/en/message.ini
@@ -47,3 +47,7 @@ facts_module_did_you_know = Did you know, that: {answer}
 facts_module_did_you_know_not_found = I don't know such facts, but did you know: {answer}
 
 Language_module.set_up_language = Ok. Starting since this moment I will speak on {language}.
+
+feedback = Thank you for your feedback!
+
+smalltalk.current.time = {hours} hours, {minutes} minutes and {seconds} seconds
